samples/_failures_safe/1761252908_d97f6b_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_73fdebf3.c: In function ‘main’:
./samples/SAFE/__tmp_73fdebf3.c:144:5: error: expected declaration or statement at end of input
  144 |     if (!add_compression_block(&ctx, sample_data2, sizeof(sample_data2))) {
      |     ^~
./samples/SAFE/__tmp_73fdebf3.c:144:5: error: expected declaration or statement at end of input
